--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
     "classnames": "^2.3.2",
     "react-router-dom": "^6.10.0",
     "sass-loader": "^13.2.2"
-  }
+  },
+  "proxy": "http://oncoanalitika.com"
 }
