fix nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -56,9 +56,16 @@ http {
                 listen 0.0.0.0:80;
                 listen [::]:80;
 
+                location = /index.html {
+                        root /app;
+                }
+
+                location /static {
+                        root /app;
+                }
+
                 location / {
-                    index index.html;
-                    root /app;
+                    rewrite ^ /index.html last;
                 }
         }
 
