--- a/package.json
+++ b/package.json
@@ -1,34 +1,18 @@
 {
-  "name": "my-app",
+  "name": "amnesis-web",
   "version": "0.1.5",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.23",
-    "@types/react": "^18.0.35",
-    "@types/react-dom": "^18.0.11",
-    "eslint": "^8.39.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "sass": "^1.62.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.10.0",
+    "classnames": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -43,8 +27,13 @@
     ]
   },
   "devDependencies": {
-    "classnames": "^2.3.2",
-    "react-router-dom": "^6.10.0",
+    "@types/babel__core": "^7.20.1",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "typescript": "^4.9.5",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.64.0",
     "sass-loader": "^13.2.2"
   },
   "proxy": "https://old.oncoanalitika.com"
