--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.5",
   "private": true,
   "dependencies": {
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "classnames": "^2.3.2"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,10 +32,10 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "typescript": "^4.9.5",
     "react-scripts": "^5.0.1",
     "sass": "^1.64.0",
-    "sass-loader": "^13.2.2"
+    "sass-loader": "^13.2.2",
+    "typescript": "^4.9.5"
   },
   "proxy": "https://old.oncoanalitika.com"
 }
