--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,8 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{scss,tsx,ts,json}]
+[*.{tsx,ts,json}]
+indent_size = 4
+
+[*.{scss}]
 indent_size = 2
