--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.5",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.5",
+    "axios": "^1.4.0",
+    "axios-jwt": "^1.8.0",
     "classnames": "^2.3.2",
     "formik": "^2.4.2",
+    "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -31,6 +37,7 @@
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.1",
+    "@types/ms": "^0.7.31",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
