--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios-jwt": "^1.8.0",
     "classnames": "^2.3.2",
     "formik": "^2.4.2",
+    "html-react-parser": "^4.2.1",
     "material-ui-popup-state": "^5.0.9",
     "ms": "^2.1.3",
     "react": "^18.2.0",
